--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,16 @@
+body {
+  background-color: #d6e2f0;
+}
 
+main {
+  background-color: #ffffff;
+  color: #1f3251;
+}
+main h1 {
+  color: #1f3251;
+}
+main p {
+  color: #7b879d;
+}
 
 /*# sourceMappingURL=styles.css.map */
