--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,16 +1,58 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+@font-face {
+  font-family: "Outfit";
+  src: url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
+}
 body {
   background-color: #d6e2f0;
+  font-family: "Outfit", sans-serif;
+  height: 100vh;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
 }
 
 main {
   background-color: #ffffff;
-  color: #1f3251;
+  border-radius: 15px;
+  box-shadow: 2px 2px 15px #c1cbd6;
+  width: 320px;
+  height: 500px;
+  text-align: center;
+  padding: 17px;
 }
-main h1 {
-  color: #1f3251;
+main div {
+  margin: 15px;
 }
-main p {
+main div h1 {
+  color: #1f3251;
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+main div p {
   color: #7b879d;
+  font-size: 15px;
+  font-weight: 400;
+}
+main img {
+  border-radius: 15px;
+  width: 286px;
+}
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+
+.attribution a {
+  color: hsl(228, 45%, 44%);
 }
 
 /*# sourceMappingURL=styles.css.map */
